app/main/default/objects/Flosum__Branch__c/fields/Flosum__Deployment_Style__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Deployment_Style__c</fullName>
        <label>CI Deployment Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STOP ON FAILURE</fullName>
                </value>
                <value>
                    <fullName>CONTINUE ON FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>