app/main/default/objects/Flosum__Branch__c/fields/Jira_Description__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Jira_Description__c</fullName>
        <label>Jira Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>