app/main/default/objects/Flosum__Branch__c/fields/Jira_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Jira_Id__c</fullName>
        <label>Jira #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>