app/main/default/objects/Flosum__Branch__c/fields/Jira_Priority__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Jira_Priority__c</fullName>
        <label>Jira Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>