app/main/default/objects/Flosum__Branch__c/listViews/Flosum__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Branch_Name__c</columns>
        <columns>Flosum__Branch_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Flosum__Repository__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>